# UnwoundedAI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  SPEC.md  chat.py  demo.py  implementation_plan.md  pyproject.toml  schemas.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autonomous_agents.yml  ci.yml  release.yml
app/: __init__.py  config.py  deps.py  main.py  runtime.py  schemas.py
app/api/: models.py
app/graph/: __init__.py  nodes.py  policies.py  runtime.py
app/services/: __init__.py  llm.py  memory.py  observability.py  promotion.py  retrieval.py  search.py
docs/: PR_REVIEW_POLICY.md  index.md
docs/agents/: JULES_DOCUMENTATION_EXPERT.md  JULES_RED_TEAM_ATTACKER.md  JULES_REFACTOR_SURGEON.md
tests/: test_api_contract.py  test_eval_objective.py  test_gate_policy.py  test_graph_loop_breaker.py  test_promotion_policy.py  test_red_team_sycophancy.py
